--- a/src/main.html
+++ b/src/main.html
@@ -4,7 +4,8 @@
 	<title>Angular QuickStart</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="./zepto.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js">
+</script>
   </head>
   <style>
 	  body{
@@ -115,6 +116,9 @@
 				$.ajax({
 					url    : url+'/sh/user/login',
 					type   : 'POST',
+					headers: {
+				        Accept: "application/json; charset=utf-8"
+				    },
 					data   : {
 						username   :  name,
 						password   :  password,
@@ -123,7 +127,7 @@
 					success: function(data){
 						if(JSON.parse(data).success === 1){
 							Cookie('name',name,{expires:3});
-							location.href = location.origin+'main.html';
+							location.href = location.origin+'index.html';
 						}else{
 							$('#message').text(JSON.parse(data).message);
 						}
